--- a/css/desktop.css
+++ b/css/desktop.css
@@ -415,6 +415,7 @@
   margin: 0;
  }
 
+
  .controls>li.active {
   opacity: 1;
   margin: 0;
@@ -721,6 +722,10 @@
   height: calc(4.1vh + 3vw);
   border-radius: 100px;
   border: 2px white solid;
+ }
+ .small-solid-circle-p4:hover {
+  cursor: pointer;
+  box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.65);
  }
 
  .fair-d {
@@ -1080,44 +1085,48 @@
  }
  .tap1 {
   font-weight: 800;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-size: calc(0.8vh + 0.8vw);
  }
 
  #moveDown {
-   top: 65vh;
-   left: 49.6vw;
-   position: absolute;
-   z-index: 999;
-   -webkit-transform: translate(-50%, -50%);
-   transform: translate(-50%, -50%);
+  top: 65vh;
+  left: 49.6vw;
+  position: absolute;
+  z-index: 999;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
  }
 
  #moveDown h2 {
-   font-size: calc(0.55vh + 0.51vw);
-   top: calc(6vh + 2vw);
-   left: .8vw;
-   position: absolute;
-   font-weight: normal;
-   letter-spacing: calc(0.175vh + 0.175vw);
-   -webkit-transform: translate(-50%, -50%);
-   transform: translate(-50%, -50%);
-   white-space: nowrap;
+  font-size: calc(0.55vh + 0.51vw);
+  top: calc(6vh + 2vw);
+  left: .8vw;
+  position: absolute;
+  font-weight: normal;
+  letter-spacing: calc(0.175vh + 0.175vw);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  white-space: nowrap;
  }
 
  #moveDown:hover {
-   opacity: 0.7;
-   cursor: pointer;
+  opacity: 0.7;
+  cursor: pointer;
  }
 
  #moveDown span {
-     position: absolute;
-     top: 0;
-     left: 50%;
-     width: calc(3vh + 3vw);
-     height: calc(3vh + 3vw);
-     margin-left: -23px;
-     border: 1px solid #fff;
-     border-radius: 100%;
-     box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: calc(3vh + 3vw);
+  height: calc(3vh + 3vw);
+  margin-left: -23px;
+  border: 1px solid #fff;
+  border-radius: 100%;
+  box-sizing: border-box;
  }
 
  #moveDown span::before {
@@ -1128,15 +1137,15 @@
   content: '';
   width: calc(3vh + 3vw);
   height: calc(3vh + 3vw);
-  box-shadow: 0 0 0 0 rgba(255,255,255,.1);
+  box-shadow: 0 0 0 0 rgba(255, 255, 255, .1);
   border-radius: 100%;
   opacity: 0;
   -webkit-animation: moveDownBtn 3s infinite;
   animation: moveDownBtn 3s infinite;
   box-sizing: border-box;
-  }
+ }
 
-  #moveDown span::after {
+ #moveDown span::after {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -1149,40 +1158,57 @@
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
   box-sizing: border-box;
-  }
+ }
 
-  @-webkit-keyframes moveDownBtn {
+ @-webkit-keyframes moveDownBtn {
   0% {
-    opacity: 0;
+   opacity: 0;
   }
   30% {
-    opacity: 1;
+   opacity: 1;
   }
   60% {
-    box-shadow: 0 0 0 60px rgba(255,255,255,.1);
-    opacity: 0;
+   box-shadow: 0 0 0 60px rgba(255, 255, 255, .1);
+   opacity: 0;
   }
   100% {
-    opacity: 0;
+   opacity: 0;
   }
-}
-@keyframes moveDownBtn {
+ }
+ @keyframes moveDownBtn {
   0% {
-    opacity: 0;
+   opacity: 0;
   }
   30% {
-    opacity: 1;
+   opacity: 1;
   }
   60% {
-    box-shadow: 0 0 0 60px rgba(255,255,255,.1);
-    opacity: 0;
+   box-shadow: 0 0 0 60px rgba(255, 255, 255, .1);
+   opacity: 0;
   }
   100% {
-    opacity: 0;
+   opacity: 0;
   }
+ }
 }
 
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*position: absolute;
     top: 50%;
